src/objects/GVS_PicklistValueDependency__c.object
<CustomObject>
    <fields>
        <fullName>ControllingFieldValue__c</fullName>
        <label>Controlling Field Value</label>
        <referenceTo>GVS_PicklistValue__c</referenceTo>
        <relationshipLabel>Dependent Picklist Values</relationshipLabel>
        <relationshipName>DepenentPicklistValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ControllingPicklistValue__c</fullName>
        <formula>ControllingFieldValue__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Controlling Picklist Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DependentPicklistValue__c</fullName>
        <formula>DependentValue__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependent Picklist Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DependentValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Value</label>
        <referenceTo>GVS_PicklistValue__c</referenceTo>
        <relationshipLabel>Controlling Picklist Values</relationshipLabel>
        <relationshipName>ControllingValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieldAPIName__c</fullName>
        <inlineHelpText>API Name of the field which uses the dependent picklist</inlineHelpText>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectName__c</fullName>
        <label>SObject Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GVS - Picklist Value Dependency</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GVS_PVD-{000000000}</displayFormat>
        <label>Picklist Value Dependency Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GVS - Picklist Value Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>